Fixing right whitespace issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,5 @@
 @import 'scss/main';
+
+.App{
+  width: 100vw;
+}
